[project]
name = "client_support_crew"
version = "0.1.0"
description = "client-support-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
client_support_crew = "client_support_crew.main:run"
run_crew = "client_support_crew.main:run"
train = "client_support_crew.main:train"
replay = "client_support_crew.main:replay"
test = "client_support_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
